# nekocode

./: .clang-tidy  .claude-rules  .gitignore  .nekocodeignore  ANALYZE_FUTURE_IMPROVEMENTS.txt  ANALYZE_IMPLEMENTATION_PLAN.txt  ANALYZE_IMPLEMENTATION_SUMMARY.txt  CHANGELOG_PEGTL.md  CLAUDE.md  CLAUDE_QUICKSTART.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_STATUS_AND_TODO.md  CURRENT_TASK.md  DEBUG_FINDINGS_20250809.md  DEBUG_RESULTS.md  DEV_UPDATE.md  DEV_UPDATE_JP.md  DOCUMENTATION.md  DONE.md  FIX_PLAN_DETAILED_COMMANDS.txt  INSTALL_MCP.md  LICENSE  METHOD_DETECTION_FIX_PLAN.txt  MIGRATION_GUIDE.md  NEKOCODE_HANDOVER_20250730.txt  NEKOCODE_IMPROVEMENT_PLAN.md  NEVER_USE_REGEX.md  PEGTL_MIGRATION_PLAN.md  PROJECT_OVERVIEW.txt  README.md  README_REDIRECT.md  README_REDIRECT_JP.md  README_jp.md  RELEASE_NOTES_v2.0.md  REORGANIZATION_PLAN.md  RISK_MITIGATION_DETAILED.md  ROLLBACK_PROCEDURES.md  SIMPLE_REORGANIZATION.md  SIMPLE_REORG_SUCCESS.md  (+79 more)
.github/: FUNDING.yml
.github/workflows/: impact-diff.yml
.nekocode_memories/api/: clang_tidy_yaml_format.json
.nekocode_memories/memo/: clang_tidy_project_analysis.json  session_format_v1.json
.nekocode_sessions/: 19b1d497.json  312260ed.json  3247378d.json  37d017a5.json  41b144b0.json  4986c0ce.json  56a5742d.json  58c619fa.json  8145f3fb.json  8c24e06a.json  9df65606.json  aa1ec8ba.json  b0679c54.json  d524e49c.json  db0e41ca.json  f1f023d9.json
csharp_test/: Program.cs  TestProject.csproj
docs/: ARCHITECTURE.md  DEBUG_GUIDE.md  LARGE_PROJECT_HANDLING.md  README.md  USAGE.md  USAGE_jp.md
docs/analysis/: clang_tidy_real_value.md  investigate_deadcode_tools.md
docs/archive/: CHANGELOG_PEGTL.md  CPP_PARALLEL_UPDATE.txt  PCRE2_REVOLUTION.md  PEGTL_MIGRATION_PLAN.md  clang_tidy_project_integration.md
docs/claude-code/: COMMENT_EXTRACTION.md  DESIGN_PHILOSOPHY.md  INDEX.md
docs/design/: lto_analysis_design.md  session_format_design.md
docs/dev/: DEV_UPDATE_JP.md  HANDOVER_EMERGENCY.txt  JAVASCRIPT_HANDOVER.txt  TYPESCRIPT_HANDOVER.txt
docs/strategy/: external_tools_strategy.md  phase_prioritization.md
examples/: 6core_simplification.md  README.md  ai_excitement_demo.md  basic_analysis.cpp  real_world_analysis.md
experiments/clang_tidy_test/: .yaml  clang_tidy_test.cpp  complex_deadcode.cpp  merge_project_yamls.py
include/nekocode/: command_dispatcher.hpp  core.hpp  (+19 more)
legacy-cpp-version/: ARCHIVE_INFO.md  README_cpp_version.md
lto_test_project/: CMakeLists.txt  normal_test
lto_test_project/include/: used_module.hpp
lto_test_project/src/: main.cpp  used_module.cpp
mcp-nekocode-server/: README.md  mcp_server_nekocode.py  mcp_server_real.py
memory/: .gitignore  README.md
nekocode-rust/: .gitignore  Cargo.toml  README.md  SIMPLE_TASK.md  TREE_SITTER_MIGRATION_PLAN.md  benchmark_battle.sh  current_task.md  final_battle.sh  medium_test.js  small.js  test.cpp  test.cs  test.go  test.py  test.rs  test_ast.cpp  test_huge.cpp  test_template.cpp  ultimate_comparison.sh
nekocode-rust/.nekocode_memories/auto/: auto-b523f259.json
nekocode-rust/.nekocode_memories/memo/: memo-3768e29b.json  memo-55a2c385.json
nekocode-rust/.nekocode_sessions/: 02ebbaa4.json  151a2785.json  1773616e.json  1b38dd89.json  1d690728.json  1fa35495.json  26a671b9.json  380487c5.json  3cdc686f.json  41e016c1.json  4bc5038a.json  4e921ce8.json  58f2b908.json  6ee6afaf.json  7742a0ee.json  8deece15.json  99b82d8e.json  a392ac06.json  a899482b.json  aed0a5e7.json  b204a550.json  b80ec026.json  b8ab503a.json  bd9a3094.json  beeb7176.json  c177e964.json  c97daa7a.json  d861aa9e.json  e4692ad1.json  f0bb11b2.json
nekocode-rust/src/: analyzer.rs  main.rs  types.rs  universal.rs
nekocode-rust/src/analyzers/: mod.rs
nekocode-rust/src/analyzers/cpp/: analyzer.rs  mod.rs
nekocode-rust/src/analyzers/csharp/: analyzer.rs  mod.rs
nekocode-rust/src/analyzers/go/: analyzer.rs  mod.rs
nekocode-rust/src/analyzers/javascript/: analyzer.rs  analyzer.rs.backup  grammar.pest  mod.rs
nekocode-rust/src/analyzers/python/: analyzer.rs  mod.rs
nekocode-rust/src/analyzers/rust/: analyzer.rs
nekocode-rust/src/analyzers/rust_lang/: analyzer.rs  mod.rs
nekocode-rust/src/core/: ast.rs  commands.rs  edit.rs  mod.rs  preview.rs  session.rs  types.rs
releases/: nekoimpact  nekoinc  nekomcp
scripts/: impact-diff.sh
src/: REORGANIZATION_COMPLETE.md  core.cpp  cpp_analyzer.cpp  formatters.cpp  language_detection.cpp  main_ai.cpp  pegtl_analyzer.cpp
src2/: cpp_test  cpp_test.cpp  csharp_test  csharp_test.cpp  go_test  go_test.cpp  python_test  python_test.cpp  rust_test  rust_test.cpp  simple_test  simple_test.cpp  test_javascript_adapter.cpp
test-files/: sample.js  utils.js
test-include-problems/: BetterTest.cpp  C.h  D.h  E.h  Mixed.cpp  UsedHeader.h
test-projects/nyamesh-cpp/: CHANGELOG.md  CLEANUP_PLAN.txt  CMakeLists.txt  README.md  README_V23.md
test-projects/nyamesh-cpp/.qt/: QtDeploySupport.cmake
test-projects/nyamesh-cpp/core/: LightMessaging.cpp  LightMessaging.h  NyaMeshHelpers.h  UltraLightCoreBase.cpp  UltraLightCoreBase.h  nyamesh.cpp  nyamesh.h
test-projects/nyamesh-cpp/debug/: NyaMeshDebugLogger.cpp  NyaMeshDebugLogger.h
test-projects/nyamesh-cpp/intents/: IntentCommonOptions.cpp  IntentCommonOptions.h
test-projects/nyamesh-cpp/interfaces/: IEditorCore.h  IFileSystemCore.h  ISettingsCore.h
test-projects/nyamesh-cpp/messages/: CoreMessages.cpp  CoreMessages.h  IntentDefinitions_v22.h
test-projects/nyamesh-cpp/messaging/: P2PMessage.h
test-projects/nyamesh-cpp/transport/: CMAKE_INTEGRATION_GUIDE.txt  InProcessTransport.cpp  InProcessTransport.h  MillionPeerP2PTransport.cpp  MillionPeerP2PTransport.h  MillionPeerP2PTransport_Pure.h  NyaMesh2TransportAdapter.cpp  NyaMesh2TransportAdapter.h  NyaMeshTransport.cpp  NyaMeshTransport.h  P2PTransport.cpp  P2PTransport.h  P2PTransportAdapter.cpp  P2PTransportAdapter.h  TRANSPORT_LAYER_GUIDE.txt  TransportBase.h
tests/: result.json  simple.js  test.js  test_all_regex.cpp  test_core.cpp  test_core_regex.cpp  test_minimal_regex.cpp  test_performance.cpp  test_regex.cpp
(+212 files in other folders)
