[package]
name = "nekocode-rust"
version = "0.1.0"
edition = "2021"
description = "🦀 NekoCode Rust - High-speed code analysis tool (C++ to Rust port)"
authors = ["NekoCode Team"]

[dependencies]
# Core serialization and JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Parsing libraries (PEGTL equivalent) - disabled for initial build
# pest = "2.7"
# pest_derive = "2.7"

# Async runtime and concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7" # For parallel processing

# File system and path handling
walkdir = "2.3"
glob = "0.3"

# String and text processing
regex = "1.10" # Controlled regex usage where necessary
uuid = { version = "1.0", features = ["v4"] }

# Memory management and optimization
dashmap = "5.5" # Concurrent HashMap for session management
once_cell = "1.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance and diagnostics
tracing = "0.1"
tracing-subscriber = "0.3"
